force-app/main/default/objects/PS_Project_Manager_Mapping__c/PS_Project_Manager_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PS Project Manager Mapping</label>
</CustomObject>