force-app/main/default/objects/PS_Project_Manager_Mapping__c/fields/Project_Manager_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_User_Id__c</fullName>
    <label>Project Manager User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>