force-app/main/default/objects/PS_Project_Manager_Mapping__c/fields/THEATER__c.field-meta.xml
<CustomField>
    <fullName>THEATER__c</fullName>
    <label>THEATER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>