force-app/main/default/objects/PS_Project_Manager_Mapping__c/fields/Unique_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>