force-app/main/default/objects/PS_Project_Manager_Mapping__c/listViews/AllVIEW.listView-meta.xml
<ListView>
    <fullName>AllVIEW</fullName>
    <columns>NAME</columns>
    <columns>Project_Manager__c</columns>
    <columns>State__c</columns>
    <columns>THEATER__c</columns>
    <columns>Country__c</columns>
    <columns>Unique_External_ID__c</columns>
    <columns>Project_Manager_User_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllVIEW</label>
</ListView>